# tkLayout

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  tklayout.cpp
config/stdinclude/Conversions/: endcap1  flange  flangePixel
config/stdinclude/Materials/: conversions  pixel  pt2S  ptPS  rod  rodBase  rodPixel  rodPt2S  rodPtPS
config/stdinclude/ModuleTypes/: pixel  pt2S  ptPS
geometries/BarrelEndcap/Tilted/: ShortTilted3xPS_3x2S_5disks_longer_uncut.cfg
geometries/BarrelEndcap/Traditional/: 3xPS_3x2S_5disks_baseline.cfg
geometries/BarrelEndcap_Nick2013/Phase0Tracker/: Phase0Tracker.cfg
geometries/BarrelEndcap_Nick2013/Pixel/: PixelTechnicalProposal2014.cfg
geometries/BarrelEndcap_Nick2013/Simplified/: TechnicalProposal2014_simplified.cfg
geometries/BarrelEndcap_Nick2013/Traditional/: 3xPS_3x2S_5disks_baseline.cfg  3xPS_3x2S_5disks_baseline_pixelV0.cfg  TechnicalProposal2014.cfg  TechnicalProposal2014_Types.cfg
geometries/FCC/FCCeeVertexTilted_v2.01/: FCCeeVertexTilted_v2.01.cfg  MacroPixel_Fwd_module0.cfg  MacroPixel_OuterFwd_module2.cfg  MacroPixel_module0.cfg  Pixel_BRL_module1.cfg  Pixel_iFwd_module0.cfg  Strip_Fwd_half_module.cfg  Strip_material_2.5.cfg
geometries/FCC/FCCeeVertex_v0.01/: FCCeeVertex_v0.01  MacroPixel_Fwd_module2.cfg  MacroPixel_InnerFwd_module0.cfg  MacroPixel_iFwd_module1.cfg  Pixel_BRL0_module1.cfg  Pixel_InnerFwd_module0.cfg  Strip_Fwd_module.cfg
geometries/FCC/FCChh_v3.03/: FCChh_v3.03.cfg  MacroPixel_Fwd_module1.cfg  MacroPixel_InnerFwd_module1.cfg  MacroPixel_iFwd_module0.cfg  MacroPixel_iFwd_module2.cfg  MacroPixel_iFwd_module3.cfg  MacroPixel_material.cfg  Pixel_OuterFwd_module1.cfg  SimParms
geometries/FCC/FCChh_v4.01/: FCChh_v4.01.cfg  MacroPixel_OuterFwd_module0.cfg  MacroPixel_OuterFwd_module1.cfg  MacroPixel_OuterFwd_module3.cfg  MacroPixel_module1.cfg  Pixel_Fwd_module0.cfg  Pixel_Fwd_module1.cfg  Pixel_InnerFwd_module1.cfg  Pixel_OuterFwd_module0.cfg  Pixel_iFwd_module1.cfg
include/: Analyzer.h  AnalyzerVisitor.h  Analyzers.h  Bag.h  Barrel.h  Chauffeur.h  ConversionStation.h  DetectorModule.h  Disk.h  Endcap.h  Extractor.h  GeometricModule.h  InactiveElement.h  InactiveModuleTube.h  InactiveSurfaces.h  IrradiationMap.h  IrradiationMapsManager.h  Layer.h  MaterialObject.h  MaterialProperties.h  MaterialSection.h  Materialway.h  Module.h  ModuleCap.h  ModuleType.h  PlotDrawer.h  Property.h  PtErrorAdapter.h  Ring.h  RodPair.h  Sensor.h  SimParms.h  Squid.h  SummaryTable.h  SupportStructure.h  Tracker.h  Usher.h  Vizard.h  WeightDistributionGrid.h  XMLWriter.h  (+10 more)
include/AnalyzerVisitors/: IrradiationPower.h  TriggerDistanceTuningPlots.h  TriggerFrequency.h  TriggerProcessorBandwidth.h
materialDescription/modules/: pt2S
source/: delphize.cc  tklayout.cc
source/Analysis/include/: AnalyzerGeometry.h
source/Analysis/src/: AnalysisManager.cc  AnalyzerGeometry.cc  AnalyzerMatBudget.cc  AnalyzerOccupancy.cc  AnalyzerPatternReco.cc  AnalyzerResolution.cc
source/Extractors/include/: ExtractorFCCSW.h
source/Extractors/src/: ExtractorFCCSW.cc
source/Geometry/include/: Barrel.h  BeamPipe.h  DetectorModule.h  Disk.h  Endcap.h  GeometricModule.h  GeometryManager.h  Materialway.h  Polygon3D.h  Property.h
source/Geometry/src/: Barrel.cc  BeamPipe.cc  DetectorModule.cc  Disk.cc  Endcap.cc  Layer.cc  MaterialObject.cc  MaterialTable.cc  Materialway.cc  Ring.cc  RodPair.cc  Sensor.cc  SupportStructure.cc
source/Tools/include/: BFieldMap.h  IrradiationMap.h  PlotDrawer.h  SimParms.h  StringConverter.h  TagMaker.h  Units.h  global_constants.h
source/Tools/src/: BFieldMap.cc  IrradiationMap.cc  MainConfigHandler.cc  MatCalc.cc  Palette.cc  SimParms.cc  StringConverter.cc
source/Tracking/include/: Hit.h  Track.h
source/Tracking/src/: Hit.cc  Track.cc  VisitorMatTrack.cc
source/Web/include/: RootWBinaryFile.h  RootWBinaryFileList.h
source/Web/src/: RootWBinaryFile.cc  RootWSite.cc  RootWText.cc  RootWTextFile.cc
src/: Analyzer.cc  Analyzer.cpp  Bag.cpp  Barrel.cpp  Chauffeur.cpp  ConversionStation.cpp  DetectorModule.cpp  Disk.cpp  Endcap.cpp  Extractor.cc  InactiveElement.cc  InactiveModuleTube.cc  InactiveRing.cc  InactiveSurfaces.cc  InactiveTube.cc  IrradiationMap.cpp  IrradiationMapsManager.cpp  Layer.cpp  MatCalc.cc  MaterialBudget.cc  MaterialObject.cpp  MaterialProperties.cc  MaterialTab.cpp  Materialway.cpp  Module.cpp  ModuleCap.cc  PlotDrawer.cpp  PtErrorAdapter.cpp  Ring.cpp  RodPair.cpp  Squid.cc  SupportStructure.cpp  Tracker.cpp  Usher.cc  Vizard.cc  WeightDistributionGrid.cpp  XMLWriter.cc  configparser.cpp  global_funcs.cpp  hit.cpp  (+8 more)
src/AnalyzerVisitors/: TriggerProcessorBandwidth.cpp
stdinclude/ModuleTypes/: pixel  ptMixed  ptOut
trunk/xml/: trackerRecoMaterial.xml
xml/: trackerProdCuts.xml
